<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.constraintlayout.widget.ConstraintLayout
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/screenBackground">
        <!--Guidelines-->
        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/topGuideline"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent="0.01"/>
        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/bottomGuideline"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent="0.99"/>
        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/leftGuideline"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.01"/>
        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/rightGuideline"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.99"/>
        <!--Title-->
        <TextView
            android:id="@+id/textInsulinDoseCalculator"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/title_4"
            android:textAlignment="center"
            android:textColor="#E4B490"
            android:textSize="38sp"
            android:textStyle="bold"
            android:visibility="visible"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/topGuideline"
            app:layout_constraintBottom_toTopOf="@+id/bottomGuideline"
            app:layout_constraintVertical_bias="0.01"
            app:layout_constraintHorizontal_bias="0.5" />
        <!--Carbs-->
        <TextView
            android:id="@+id/textStepOne"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/step_one"
            android:textAlignment="center"
            android:textColor="#E4B490"
            android:textSize="24sp"
            android:textStyle="bold"
            android:visibility="visible"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/textInsulinDoseCalculator"
            app:layout_constraintBottom_toTopOf="@+id/bottomGuideline"
            app:layout_constraintVertical_bias="0.01"
            app:layout_constraintHorizontal_bias="0.5" />
        <TextView
            android:id="@+id/textCarbContent"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/carb_content"
            android:textColor="#E4B490"
            android:textSize="18sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/textStepOne"
            app:layout_constraintBottom_toTopOf="@+id/bottomGuideline"
            app:layout_constraintVertical_bias="0.1"
            app:layout_constraintHorizontal_bias=".15"/>
        <EditText
            android:id="@+id/editCarbContent"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="number"
            android:padding="1dp"
            app:layout_constraintStart_toEndOf="@id/textCarbContent"
            app:layout_constraintTop_toTopOf="@id/textCarbContent"
            app:layout_constraintBottom_toBottomOf="@+id/textCarbContent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintVertical_bias="0.5"
            app:layout_constraintWidth_percent=".2"/>
        <TextView
            android:id="@+id/textG1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/grams"
            android:textSize="20sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="@+id/editCarbContent"
            app:layout_constraintStart_toEndOf="@+id/editCarbContent"
            app:layout_constraintTop_toTopOf="@+id/editCarbContent" />
        <TextView
            android:id="@+id/textCarbRatio"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="8dp"
            android:text="@string/carb_ratio"
            android:textColor="#E4B490"
            android:textSize="18sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/textCarbContent"
            app:layout_constraintBottom_toTopOf="@+id/bottomGuideline"
            app:layout_constraintVertical_bias="0.1"
            app:layout_constraintHorizontal_bias=".15"/>
        <EditText
            android:id="@+id/editCarbRatio"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="number"
            android:padding="1dp"
            app:layout_constraintStart_toEndOf="@id/textCarbRatio"
            app:layout_constraintTop_toTopOf="@id/textCarbRatio"
            app:layout_constraintBottom_toBottomOf="@+id/textCarbRatio"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintVertical_bias="0.5"
            app:layout_constraintWidth_percent=".2"/>
        <TextView
            android:id="@+id/textG2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/grams"
            android:textSize="20sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="@+id/editCarbRatio"
            app:layout_constraintStart_toEndOf="@+id/editCarbRatio"
            app:layout_constraintTop_toTopOf="@+id/editCarbRatio" />
        <TextView
            android:id="@+id/textCarbInsulin"
            android:layout_width="166dp"
            android:layout_height="47dp"
            android:layout_marginTop="16dp"
            android:text="@string/insulin_carbs"
            android:textColor="#E4B490"
            android:textSize="18sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/textCarbRatio"
            app:layout_constraintBottom_toTopOf="@+id/bottomGuideline"
            app:layout_constraintVertical_bias="0.1"
            app:layout_constraintHorizontal_bias=".15" />
        <TextView
            android:id="@+id/editCarbInsulin"
            android:layout_width="100dp"
            android:layout_height="48dp"
            android:layout_marginStart="3dp"
            android:ems="10"
            android:padding="12dp"
            app:layout_constraintStart_toEndOf="@id/textCarbInsulin"
            app:layout_constraintTop_toTopOf="@id/textCarbInsulin"
            app:layout_constraintBottom_toBottomOf="@+id/textCarbInsulin"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintVertical_bias="0.5"
            app:layout_constraintHorizontal_bias=".25"
            app:layout_constraintWidth_percent=".1" />
        <TextView
            android:id="@+id/textView24"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/units"
            android:textSize="20sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="@+id/editCarbInsulin"
            app:layout_constraintStart_toEndOf="@+id/editCarbInsulin"
            app:layout_constraintTop_toTopOf="@+id/editCarbInsulin"
            app:layout_constraintHorizontal_bias=".25"/>
        <!--BloodSugar-->
        <TextView
            android:id="@+id/textStepTwo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/step_two"
            android:textAlignment="center"
            android:textColor="#E4B490"
            android:textSize="24sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/textCarbInsulin"
            app:layout_constraintBottom_toTopOf="@+id/bottomGuideline"
            app:layout_constraintVertical_bias="0.1"
            app:layout_constraintHorizontal_bias="0.5" />
        <TextView
            android:id="@+id/textCurrentGlucose"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/current_glucose"
            android:textColor="#E4B490"
            android:textSize="18sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/textStepTwo"
            app:layout_constraintBottom_toTopOf="@+id/bottomGuideline"
            app:layout_constraintVertical_bias="0.1"
            app:layout_constraintHorizontal_bias=".15"/>
        <EditText
            android:id="@+id/editCurrentGlucose"
            android:layout_width="100dp"
            android:layout_height="48dp"
            android:ems="10"
            android:inputType="number"
            android:padding="12dp"
            android:textSize="16sp"
            app:layout_constraintStart_toEndOf="@id/textCurrentGlucose"
            app:layout_constraintTop_toTopOf="@id/textCurrentGlucose"
            app:layout_constraintBottom_toBottomOf="@+id/textCurrentGlucose"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintVertical_bias="0.5"
            app:layout_constraintWidth_percent=".2"/>
        <TextView
            android:id="@+id/textViewMg1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/mg"
            android:textSize="20sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="@+id/editCurrentGlucose"
            app:layout_constraintStart_toEndOf="@+id/editCurrentGlucose"
            app:layout_constraintTop_toTopOf="@+id/editCurrentGlucose"  />
        <TextView
            android:id="@+id/textTargetGlucose"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:layout_marginEnd="8dp"
            android:text="@string/target_glucose"
            android:textColor="#E4B490"
            android:textSize="18sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/textCurrentGlucose"
            app:layout_constraintBottom_toTopOf="@+id/bottomGuideline"
            app:layout_constraintVertical_bias="0.1"
            app:layout_constraintHorizontal_bias=".15" />
        <EditText
            android:id="@+id/editTargetGlucose"
            android:layout_width="100dp"
            android:layout_height="48dp"
            android:layout_marginEnd="2dp"
            android:ems="10"
            android:inputType="number"
            android:padding="12dp"
            app:layout_constraintStart_toEndOf="@id/textTargetGlucose"
            app:layout_constraintTop_toTopOf="@id/textTargetGlucose"
            app:layout_constraintBottom_toBottomOf="@+id/textTargetGlucose"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintVertical_bias="0.5"
            app:layout_constraintWidth_percent=".2"/>
        <TextView
            android:id="@+id/TextViewMg2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/mg"
            android:textSize="20sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="@+id/editTargetGlucose"
            app:layout_constraintStart_toEndOf="@+id/editTargetGlucose"
            app:layout_constraintTop_toTopOf="@+id/editTargetGlucose"  />
        <TextView
            android:id="@+id/textSensitivity"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:text="@string/insulin_sensitivity"
            android:textColor="#E4B490"
            android:textSize="18sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/textTargetGlucose"
            app:layout_constraintBottom_toTopOf="@+id/bottomGuideline"
            app:layout_constraintVertical_bias="0.1"
            app:layout_constraintHorizontal_bias=".15"  />
        <EditText
            android:id="@+id/editSensitivity"
            android:layout_width="100dp"
            android:layout_height="48dp"
            android:ems="10"
            android:inputType="number"
            android:padding="12dp"
            app:layout_constraintStart_toEndOf="@id/textSensitivity"
            app:layout_constraintTop_toTopOf="@id/textSensitivity"
            app:layout_constraintBottom_toBottomOf="@+id/textSensitivity"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintVertical_bias="0.5"
            app:layout_constraintWidth_percent=".2" />
        <TextView
            android:id="@+id/textViewMg3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/mg"
            android:textSize="20sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="@+id/editSensitivity"
            app:layout_constraintStart_toEndOf="@+id/editSensitivity"
            app:layout_constraintTop_toTopOf="@+id/editSensitivity" />
        <TextView
            android:id="@+id/textGlucoseInsulin"
            android:layout_width="185dp"
            android:layout_height="47dp"
            android:layout_marginTop="24dp"
            android:text="@string/insulin_dose"
            android:textColor="#E4B490"
            android:textSize="18sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/textSensitivity"
            app:layout_constraintBottom_toTopOf="@+id/bottomGuideline"
            app:layout_constraintVertical_bias="0.1"
            app:layout_constraintHorizontal_bias=".15" />
        <TextView
            android:id="@+id/editGlucoseInsulin"
            android:layout_width="100dp"
            android:layout_height="48dp"
            android:ems="10"
            android:inputType="number"
            app:layout_constraintStart_toEndOf="@id/textGlucoseInsulin"
            app:layout_constraintTop_toTopOf="@id/textGlucoseInsulin"
            app:layout_constraintBottom_toBottomOf="@+id/textGlucoseInsulin"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintVertical_bias="0.5"
            app:layout_constraintHorizontal_bias=".15"
            app:layout_constraintWidth_percent=".1"  />
        <TextView
            android:id="@+id/textView23"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/units"
            android:textSize="20sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="@+id/editGlucoseInsulin"
            app:layout_constraintStart_toEndOf="@+id/editGlucoseInsulin"
            app:layout_constraintTop_toTopOf="@+id/editGlucoseInsulin"
            app:layout_constraintHorizontal_bias=".25"/>
        <!--CalculateButton-->
        <Button
            android:id="@+id/buttonCalculate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/buttonBackground"
            android:text="@string/calculate"
            android:textColor="@color/black"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/textGlucoseInsulin"
            app:layout_constraintBottom_toTopOf="@+id/bottomGuideline"
            app:layout_constraintVertical_bias="0.1"
            app:layout_constraintHorizontal_bias=".5"/>
        <!--TotalInsulin-->
        <TextView
            android:id="@+id/textTotalInsulin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAlignment="center"
            android:text="@string/total_insulin"
            android:textColor="#E4B490"
            android:textSize="20sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/buttonCalculate"
            app:layout_constraintBottom_toTopOf="@+id/bottomGuideline"
            app:layout_constraintVertical_bias="0.1"/>
        <TextView
            android:id="@+id/editTotalInsulin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="10"
            android:padding="12dp"
            app:layout_constraintTop_toBottomOf="@id/textTotalInsulin"

            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintVertical_bias="0.1" />
        <TextView
            android:id="@+id/textUnits"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/units"
            android:textSize="20sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="@+id/editTotalInsulin"
            app:layout_constraintStart_toEndOf="@+id/editTotalInsulin"
            app:layout_constraintTop_toTopOf="@+id/editTotalInsulin" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>
