<?xml version="1.0" encoding="utf-8"?>
<layout>
    <data>
        <variable
            name="myLoginViewModel"
            type="Login.LoginViewModel" />
    </data>
    <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingStart="16dp"
        android:paddingEnd="16dp"
        android:paddingTop="16dp"
        android:paddingBottom="16dp"
        android:background="@color/screenBackground"
        tools:context=".SecondFragment">

        <!--Guidelines-->
        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/topGuideline"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent="0.01"/>
        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/bottomGuideline"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent="0.99"/>
        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/leftGuideline"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.01"/>
        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/rightGuideline"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.99"/>

        <!--Title-->
        <TextView
            android:id="@+id/textViewTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Login"
            android:textColor="#E4B490"
            android:textSize="60sp"
            android:textStyle="bold"
            android:visibility="visible"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/topGuideline"
            app:layout_constraintBottom_toTopOf="@+id/bottomGuideline"
            app:layout_constraintVertical_bias="0.10"
            app:layout_constraintHorizontal_bias="0.5"/>
        <!--Username-->
        <TextView
            android:id="@+id/textUsername"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="11dp"
            android:text="@string/Username"
            android:textColor="#E4B490"
            android:textSize="20sp"
            android:visibility="visible"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/textViewTitle"
            app:layout_constraintBottom_toTopOf="@+id/bottomGuideline"
            app:layout_constraintVertical_bias="0.35"
            app:layout_constraintHorizontal_bias="0.5" />
        <EditText
            android:id="@+id/editUsername"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:autofillHints="@string/Username"
            android:background="@color/buttonBackground"
            android:ems="10"
            android:hint="@string/Username"
            android:inputType="textPersonName"
            android:text="@={myLoginViewModel.inputUsername}"
            android:padding="12dp"
            android:visibility="visible"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/textUsername"
            app:layout_constraintBottom_toTopOf="@+id/bottomGuideline"
            app:layout_constraintVertical_bias="0.1"
            app:layout_constraintHorizontal_bias="0.5"
            tools:ignore="DuplicateSpeakableTextCheck" />
        <!--Password-->
        <TextView
            android:id="@+id/textPassword"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Password"
            android:textColor="#E4B490"
            android:textSize="20sp"
            android:visibility="visible"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/editUsername"
            app:layout_constraintBottom_toTopOf="@+id/bottomGuideline"
            app:layout_constraintVertical_bias="0.1"
            app:layout_constraintHorizontal_bias="0.5" />
        <EditText
            android:id="@+id/editPassword"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:autofillHints="@string/Password"
            android:background="@color/buttonBackground"
            android:ems="10"
            android:hint="@string/Password"
            android:inputType="textPassword"
            android:text="@={myLoginViewModel.inputPassword}"
            android:padding="12dp"
            android:visibility="visible"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/textPassword"
            app:layout_constraintBottom_toTopOf="@+id/bottomGuideline"
            app:layout_constraintVertical_bias="0.1"
            app:layout_constraintHorizontal_bias="0.5"
            tools:ignore="DuplicateSpeakableTextCheck" />

        <!--Buttons-->
        <Button
            android:id="@+id/buttonLogin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/buttonBackground"
            android:text="@string/Login"
            android:onClick="@{()->myLoginViewModel.loginButton()}"
            android:textColor="@color/black"
            android:visibility="visible"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/editPassword"
            app:layout_constraintBottom_toTopOf="@+id/bottomGuideline"
            app:layout_constraintVertical_bias="0.7"
            app:layout_constraintHorizontal_bias="0.3"
            tools:ignore="DuplicateSpeakableTextCheck" />
        <Button
            android:id="@+id/buttonCancel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/buttonBackground"
            android:text="@string/Cancel"
            android:textColor="@color/black"
            android:visibility="visible"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/editPassword"
            app:layout_constraintBottom_toTopOf="@+id/bottomGuideline"
            app:layout_constraintVertical_bias="0.7"
            app:layout_constraintHorizontal_bias="0.7" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>